# PsdTimelapse

./: .cspell.json  .gitignore  .importlinter  .pre-commit-config.yaml  atom  debug_errors.py  domain_verification.py  generate_plan.py  pyproject.toml  verify_refactor.py
engine/: errors.json  fix_lint.sh  main.py  patterns.json  pyproject.toml  requirements.txt
engine/media/test_project/: _manifest.json
engine/src/adapters/: __init__.py
engine/src/adapters/driven/: __init__.py
engine/src/adapters/driven/cache/: in_memory_cache_adapter.py
engine/src/adapters/driven/encoder/: __init__.py  alpha_composite_module.py  exr_output_adapter.py  ffmpeg_command_factory.py  ffmpeg_pipe_encoder.py  layer_compositor_service.py  layer_video_adapter.py  moviepy_encoder_adapter.py  mp4_encoder_adapter.py  nvenc_capability_module.py  nvenc_detector.py  nvenc_encoder_adapter.py  zerocopy_encoder.py
engine/src/adapters/driven/filesystem/: local_asset_provider_adapter.py  local_file_system_adapter.py
engine/src/adapters/driven/image/: pillow_image_adapter.py
engine/src/adapters/driven/logging/: std_logger_adapter.py
engine/src/adapters/driven/notifications/: console_notification_adapter.py
engine/src/adapters/driven/psd_modeler/: __init__.py  psdtools_parser_adapter.py
engine/src/adapters/driven/renderers/: cupy_color_converter.py  cupy_compositor.py  cupy_renderer_adapter.py  exr_renderer_adapter.py  pillow_backend.py  pillow_renderer_adapter.py
engine/src/adapters/driven/system/: system_random_adapter.py  system_time_adapter.py
engine/src/adapters/driven/ui_modeler/: __init__.py  pillow_base_adapter.py  pillow_canvas_adapter.py  pillow_constants_adapter.py  pillow_header_adapter.py  pillow_layers_panel_adapter.py  pillow_modeler_adapter.py  pillow_toolbars_adapter.py
engine/src/adapters/driving/: __init__.py
engine/src/adapters/driving/http/: http_api_adapter.py
engine/src/assets/Reference/: code.html
engine/src/domain/: __init__.py
engine/src/domain/core/: __init__.py  engine.py
engine/src/domain/entities/: __init__.py  action_entity.py  asset_entity.py  camera_entity.py  document_entity.py  layer_entity.py  scene_entity.py  smart_action_entity.py  timeline_entity.py  viewport_entity.py  world_entity.py
engine/src/domain/modules/: __init__.py
engine/src/domain/modules/animator/: __init__.py  animator_orchestrator.py
engine/src/domain/modules/compositor/: __init__.py  compositor_orchestrator.py
engine/src/domain/modules/layout_manager/: __init__.py  coordinate_mapper_module.py  layout_orchestrator.py
engine/src/domain/modules/pipeline_manager/: __init__.py  pipeline_orchestrator.py
engine/src/domain/modules/script_director/: __init__.py  script_orchestrator.py
engine/src/domain/ports/: __init__.py
engine/src/domain/ports/media/: exr_export_port.py  frame_output_port.py  image_processing_port.py  overlay_port.py  psd_port.py  video_port.py
engine/src/domain/ports/render/: compositor_port.py  gpu_renderer_port.py  renderer_port.py
engine/src/domain/ports/store/: asset_provider_port.py  cache_port.py  file_system_port.py
engine/src/domain/ports/system/: logger_port.py  notification_port.py  random_port.py  time_port.py
engine/src/domain/ports/ui/: ui_renderer_port.py
engine/src/domain/value_objects/: __init__.py
engine/src/domain/value_objects/analysis/: __init__.py  classification_result_value.py  layer_analysis_value.py
engine/src/domain/value_objects/animation/: __init__.py  action_type_value.py  animation_path.py  brush_path_type_value.py  brush_tool_value.py  director_profile_value.py  easing_curve_value.py  layer_anim_state.py  layer_classification_value.py  path_direction_value.py  render_state_value.py  sequencing_strategy.py  sequencing_strategy_value.py  (+1 more)
engine/tools/: llm_patterns.json  run_auto_fix.sh
engine/tools/auto_fixer/: main.py
engine/tools/auto_fixer/analysis/: __init__.py  analyzer.py
engine/tools/auto_fixer/collectors/: __init__.py  manager.py
engine/tools/auto_fixer/core/: config.py  types.py
engine/tools/auto_fixer/executors/: base.py  cleaners.py  import_order_fixer.py  line_length_fixer.py  manager.py  missing_import_fixer.py  mypy_suppressor_strategy.py  return_type_fixer.py  ruff_auto.py  type_fixing.py  unused_import_fixer.py  variable_naming_fixer.py
(+247 files in other folders)
