[project]
name = "psd-timelapse-engine"
version = "2.0.0"
description = "PSD Timelapse Generation Engine"
requires-python = ">=3.12"

[tool.ruff]
# Target Python 3.12+
target-version = "py312"

# Line length to encourage readability, but allowing some breathing room
line-length = 100

# Exclude generated or irrelevant directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "src/domain/modules/pipeline_manager/scenario",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E", # pycodestyle errors
    "F", # Pyflakes
    "W", # pycodestyle warnings
    "I", # isort (import sorting)
    "B", # flake8-bugbear (common logical errors)
    "UP", # pyupgrade (modernize syntax)
    "N", # pep8-naming
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict = true
ignore_missing_imports = true # Useful for libraries without stubs (like moviepy, psd-tools sometimes)
exclude = [
    "src/domain/modules/pipeline_manager/scenario",
]

[[tool.mypy.overrides]]
# Disable strict checks for tests to allow easier mocking
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
